# jwt_auth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 32a3b6e693d7_add_test_data.py  67ef29c202fe_patient_diagnose_tables.py
app/: events.py  main.py  settings.py
app/api/: login.py  patients.py  routers.py
app/db/: events.py  models.py  sqlalchemy.py
app/dependencies/: dependency.py
app/schemas/: patient.py  token.py
app/settings/: config.py
