[tool.poetry]
name = "live"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

fastapi = "~0.70.0"
uvicorn = "~0.13.4"

alembic = "~1.6.5"
SQLAlchemy = "~1.4.20"
psycopg2-binary = "~2.9.1"
asyncpg = "~0.23.0"
greenlet = "~1.1.1"
python-jose = "~3.3.0"
loguru = "~0.5.3"
passlib = "~1.7.4"
python-multipart = "0.0.5"
bcrypt = "~3.2.0"
pydantic = {version="~1.8.1", extras=["dotenv"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
